# food/src/main/resources/openapi/food.yaml
@@ -85,6 +85,42 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
+    put:
+      summary: Kategória módosítása
+      description: Módosítja az ételkategória adatait.
+      security:
+        - BearerAuth: [ ]
+      x-operation-extra-annotation: '@RolesAllowed("edit")'
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: A kategória egyedi azonosítója.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/FoodCategoryRequest"
+      responses:
+        "200":
+          description: Kategória sikeresen módosítva
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FoodCategoryResponse"
+              example:
+                id: "1"
+                name: Előételek
+        "404":
+          description: Kategória nem található
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
     delete:
       summary: Kategória törlése
       description: Törli a kategóriát ID alapján.
